--- a/style.css
+++ b/style.css
@@ -1,10 +1,29 @@
 /*for headers*/
 #grad{
     background-image: linear-gradient(to top, #ffffff 5%, #6cc7ad 50%, #00d4ff 100%);
+ 
+  p{
+    font-size: 25px;
   }
-  .navbar{
-    height: 70px;
-    /*background-image: linear-gradient(to left, #ffffff 10%, #000000 90%);*/
-    border: none
+  p {
+    text-align: justify;
+    font-size: 25px;
   }
-  
+  h2{
+    margin: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    
+  }
+  h3{
+    text-transform: uppercase;
+  }
+  #logo{
+    height: 1px;
+  }
+  #top{
+    height: 5px;
+  }
+  img{
+    height: 1px;
+  }
