--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     text-align: center;
   }
 
-  h1 {
-    color: green;
+  
+  h3{
+    text-transform: uppercase;
   }
 
   img {
@@ -21,3 +22,11 @@
   p {
     text-align: justify;
     font-size: 25px;
+  }
+  #space{
+    margin-top: 50px;
+  }
+  h2{
+    margin-top: 10px;
+  }
+  
