--- a/style.css
+++ b/style.css
@@ -4,8 +4,21 @@
 
   }
   body {
-    margin: 20px;
+
+
+
+    background-color: #e5e5f7;
+    opacity: 0.8;
+    background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 40px ), repeating-linear-gradient( #444cf755, #444cf7 );
+
+
+
+
+
+    border-image-repeat: repeat;
     text-align: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(183deg, rgb(2, 0, 36) 0%, rgb(104, 189, 114) 0%, rgb(105, 211, 216) 100%);
   }
 
   
@@ -21,8 +34,9 @@
   p {
     text-align: justify;
     font-size: 25px;
+  
   }
-  #space{
+#space{
     margin-top: 100px;
     padding: 1px;
   }
@@ -35,9 +49,8 @@
   .footertext{
     font-weight: bold;
   }
-footer{
-  height:10px;
-
+  footer{
+    height:10px;
 }
 .footer {
   position:static;
@@ -66,7 +79,6 @@ footer{
 #para3{
   margin-right: 1px;
   display: inline-block;
-  
 }
 .divv{
   margin-top: 100px;
@@ -74,12 +86,10 @@ footer{
 .texthere{
   margin-top: 100px;
 }
-
 .column {
   float: left;
   width: 50%;
 }
-
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -99,7 +109,6 @@ footer{
   text-align: center;
   margin-left: 246px;
 }
-
 #prope{
   width: 75px;
   position: relative;
@@ -110,20 +119,40 @@ footer{
   width: 75px;
   text-align: center;
   vertical-align:bottom;
- 
 }
-
 #nav-list li {
+  font-family:'Times New Roman', Times, serif;
   display: inline-block;
   font-size: 18px;
   margin: 0px;
   vertical-align:bottom;
   line-height:normal;   
 }
-
 .logo-img {
   position:absolute;
   left:0px;
   top:0px;
   margin: 0px 0px 90px 0px;
+}
+.navbar{
+  font-family:'Times New Roman', Times, serif;
+}
+.parallax {
+  /* The image used */
+  background-image: url("favicon.ico/image-asset.jpg");
+
+  /* Set a specific height */
+  min-height: 500px; 
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 100%;
+
+}
+
+#contactus{
+  
 }
